--- a/src/compornents/Cell.module.css
+++ b/src/compornents/Cell.module.css
@@ -15,3 +15,14 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.inditate {
+  width: 64px;
+  height: 64px;
+  background-color: rgb(170 239 59);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
